add hover/focus, hide title

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <button type="button" class="hero-button">Замовити послугу</button>
       </section>
       <section class="benefits-section">
-        <h2 class="section-title">Наші переваги</h2>
+        <h2 class="section-title visually-hidden">Наші переваги</h2>
         <ul class="benefits-list">
           <li>
             <h3 class="benefits-title">Увага до деталей</h3>
