--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     </header>
     <main>
       <section class="portfolio-section">
-        <h1>Портфоліо</h1>
+        <h1 class="visually-hidden">Портфоліо</h1>
         <ul class="filter-list">
           <li><button type="button" class="filter-item">Усі</button></li>
           <li><button type="button" class="filter-item">Веб-сайти</button></li>
