add vars,add current, change body styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -17,7 +24,9 @@
         <ul class="site-nav">
           <li><a href="./index.html" class="site-nav-item">Студія</a></li>
           <li>
-            <a href="./portfolio.html" class="site-nav-item">Портфоліо</a>
+            <a href="./portfolio.html" class="site-nav-item current"
+              >Портфоліо</a
+            >
           </li>
           <li><a href="#" class="site-nav-item">Контакти</a></li>
         </ul>
