--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
           Web<span class="logo-header">Studio</span></a
         >
         <ul class="site-nav">
-          <li><a href="./index.html" class="site-nav-item">Студія</a></li>
+          <li>
+            <a href="./index.html" class="site-nav-item current">Студія</a>
+          </li>
           <li>
             <a href="./portfolio.html" class="site-nav-item">Портфоліо</a>
           </li>
@@ -100,7 +102,7 @@
       <section class="team-section">
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-list">
-          <li>
+          <li class="team-item">
             <img
               src="./images/igor-employee.jpg"
               alt="Ігор Демʼяненко"
@@ -109,7 +111,7 @@
             <h3 class="team-member">Ігор Демʼяненко</h3>
             <p class="member-description">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/olga-employee.jpg"
               alt="Ольга Рєпіна"
@@ -118,7 +120,7 @@
             <h3 class="team-member">Ольга Рєпіна</h3>
             <p class="member-description">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/mykola-employee.jpg"
               alt="Микола Тарасов"
@@ -127,7 +129,7 @@
             <h3 class="team-member">Микола Тарасов</h3>
             <p class="member-description">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/mykhailo-employee.jpg"
               alt="Михайло Єрмаков"
